--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -33,6 +35,12 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    kotlin {
+        jvmToolchain {
+            languageVersion.set(JavaLanguageVersion.of(8))
+        }
+        jvmToolchain(8)
+    }
 }
 
 dependencies {
@@ -52,4 +60,12 @@ dependencies {
     implementation "androidx.navigation:navigation-dynamic-features-fragment:2.7.3"
     // Testing Navigation
     androidTestImplementation "androidx.navigation:navigation-testing:2.7.3"
+
+    //dagger
+    implementation("com.google.dagger:hilt-android:2.44")
+    kapt("com.google.dagger:hilt-android-compiler:2.44")
+}
+// Allow references to generated code
+kapt {
+    correctErrorTypes = true
 }
