--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.NewHoroscoApp"
         tools:targetApi="31">
         <activity
+            android:name="com.horoscope.newhoroscoapp.ui.detail.HoroscopeDetailActivity"
+            android:exported="false" />
+        <activity
             android:name="com.horoscope.newhoroscoapp.ui.home.MainActivity"
             android:exported="true">
             <intent-filter>
