--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,31 +37,25 @@ android {
     buildFeatures {
         viewBinding = true
     }
-    kotlin {
-        jvmToolchain {
-            languageVersion.set(JavaLanguageVersion.of(8))
-        }
-        jvmToolchain(8)
-    }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.core:core-ktx:1.13.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     //navigation
-    implementation("androidx.navigation:navigation-fragment-ktx:2.7.5")
-    implementation("androidx.navigation:navigation-ui-ktx:2.7.5")
+    implementation("androidx.navigation:navigation-fragment-ktx:2.7.7")
+    implementation("androidx.navigation:navigation-ui-ktx:2.7.7")
     // Feature module Support
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.7.5"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.7.7"
     // Testing Navigation
-    androidTestImplementation "androidx.navigation:navigation-testing:2.7.5"
+    androidTestImplementation "androidx.navigation:navigation-testing:2.7.7"
 
 
     //DaggerHilt
@@ -74,6 +68,6 @@ dependencies {
     implementation ("com.squareup.okhttp3:logging-interceptor:4.11.0")
 }
 // Allow references to generated code
-kapt {
-    correctErrorTypes = true
-}
+//kapt {
+//    correctErrorTypes = true
+//}
