--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,15 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            _isDebuggable = false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "BASE_URL", "\"https://newastro.vercel.app/\"")
+            resValue("string", "rodrigomasg", "HoroscopeApp")
+        }
+        debug {
+            _isDebuggable = true
+            resValue("string", "rodrigomasg", "[DEBUG] HoroscopeApp")
+            buildConfigField("String", "BASE_URL", "\"https://newastro.vercel.app/\"")
         }
     }
     compileOptions {
@@ -36,6 +44,7 @@ android {
     }
     buildFeatures {
         viewBinding = true
+        buildConfig = true
     }
 }
 
@@ -63,9 +72,9 @@ dependencies {
     kapt("com.google.dagger:hilt-compiler:2.48")
 
     //Retrofit
-    implementation ("com.squareup.retrofit2:retrofit:2.9.0")
-    implementation ("com.squareup.retrofit2:converter-gson:2.9.0")
-    implementation ("com.squareup.okhttp3:logging-interceptor:4.11.0")
+    implementation("com.squareup.retrofit2:retrofit:2.9.0")
+    implementation("com.squareup.retrofit2:converter-gson:2.9.0")
+    implementation("com.squareup.okhttp3:logging-interceptor:4.11.0")
 }
 // Allow references to generated code
 //kapt {
